# ClipCloud

./: .gitignore  docker-compose.yml  nginx.conf
ClipCloudClient/: DockerFile  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
ClipCloudClient/src/: MainRoutes.jsx  index.css  main.jsx
ClipCloudClient/src/Api/: rooms.js
ClipCloudClient/src/GenerateNickname/: generateNickname.js
ClipCloudClient/src/components/: CopyButton.jsx  MessageComposer.jsx  NicknameInput.jsx  Popup.jsx  PopupFiles.jsx  RoomCode.jsx
ClipCloudClient/src/pages/: ChatRoom.jsx  Home.jsx  JoinRoom.jsx
ClipCloudServer/: Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ClipCloudServer/src/: models.py
ClipCloudServer/src/api/: router.py
ClipCloudServer/src/dependency/: dependency_factory.py  services.py
ClipCloudServer/src/models/: message.py  room.py
ClipCloudServer/src/schemas/: message.py
ClipCloudServer/src/services/: connecrions.py  rate_limit.py  room.py
ClipCloudServer/tests/: test_redis.py
redisdata/: dump.rdb
