[project]
name = "ClipCloud"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "faststream>=0.6.7",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.3.0",
    "uvicorn[standard]>=0.41.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "asyncio: mark test as asyncio"
]
pythonpath = [".", "src"]
asyncio_mode = "auto"
